<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViews"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextWhite"
    tools:context=".ui.activities.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimens_medium"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimens_medium">

                    <TextView
                        android:id="@+id/titleTextVIew"
                        style="@style/TitleTextDetail"
                        android:textSize="25sp"
                        tools:text="@string/dummy_string" />

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        tools:text="@string/dummy_string" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimens_medium">

                    <LinearLayout
                        android:layout_width="@dimen/dimens_weight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/view_rating" />

                        <TextView
                            android:id="@+id/ratingTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp"
                            tools:text="@string/dummy_string" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/dimens_weight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/view_popularity" />

                        <TextView
                            android:id="@+id/popularityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp"
                            tools:text="@string/dummy_string" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimens_medium">

                    <TextView
                        style="@style/TitleTextDetail"
                        android:text="@string/view_overview"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/overviewTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextPrimary"
                        tools:text="@string/dummy_string" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>